<resources>
    <string name="app_name">Schedule Meeting</string>
    <string name="meeting_title">Name</string>
    <string name="meeting_name_hint">Meeting Name</string>
    <string name="when">When</string>
    <string name="time">Time</string>
    <string name="when_text">Wed - 18th September</string>
    <string name="time_text">11:00 am</string>
    <string name="people_to_invite">People to invite</string>
    <string name="user_name">Enter Name</string>
    <string name="user_name_title">David</string>
    <string name="date_text">Wed - 18th September</string>
    <string name="meeting_room">Meeting Room</string>
</resources>
